Fix css on smaller screens

--- a/style.css
+++ b/style.css
@@ -139,9 +139,8 @@ nav .link
 {
     margin-top: 6%;
     margin-left: 20%;
-    width: 440px;
+    height: 40vh;
     left: 52%;
-    height: auto;
 }
 
 .page2 .video
@@ -149,7 +148,7 @@ nav .link
     margin: 60px auto;
     background-color: lightgray;
     width: 92%;
-    height: 450px;
+    padding-top: 56.25%;
 }
 
 .page3
@@ -195,8 +194,8 @@ nav .link
 }
 
 .page3 .podcast-logo {
-  height: 40vh;
-  width: 40vh;
+  height: 26vh;
+  width: 26vh;
   margin: 2rem auto;
 }
 
